test: fix media search service tests